[ADD] add,delete policies both side admin, employee

--- a/Files_Data/hrsm_admin_dashboard/policies.html
+++ b/Files_Data/hrsm_admin_dashboard/policies.html
@@ -729,7 +729,7 @@
 									<div class="form-group">
 										<label>Upload Policy <span class="text-danger">*</span></label>
 										<div class="custom-file">
-											<input type="file" class="custom-file-input" id="policy_upload">
+											<input type="file" class="" id="policy_upload">
 											<label class="custom-file-label" for="policy_upload">Choose file</label>
 										</div>
 									</div>
